# C99_MNIST

./: CMakeLists.bak  CMakeLists.txt  README.md  image.mem  main.c  model-20191231-8975.sav  model.sav  test.c  vector.h
include/: dataio.h  memtool.h  model.h  mytype.h  network.h  vector.h
src/: demoted.c  image_input.c  main.c  main_old.c  main_oldold.c  test.c
